// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionHeading should forward slot properties to the toolbar 1`] = `
<Styled(SectionHeading)
  depth={2}
  href="blank#section"
  id="section"
  toolbar={
    <Slot
      name="slot"
      props={
        Object {
          "bar": "baz",
          "foo": 1,
        }
      }
    />
  }
>
  A Section
</Styled(SectionHeading)>
`;

exports[`SectionHeading should render a deprecated section heading 1`] = `
<div
  className="rsg--wrapper-0"
>
  <Styled(Heading)
    id="section"
    level={2}
  >
    <a
      className="rsg--sectionName-2 rsg--isDeprecated-3"
      href="/section"
    >
      A Section
    </a>
  </Styled(Heading)>
  <div
    className="rsg--toolbar-1"
  >
    <FakeToolbar />
  </div>
</div>
`;

exports[`SectionHeading should render a section heading 1`] = `
<div
  className="rsg--wrapper-0"
>
  <Styled(Heading)
    id="section"
    level={2}
  >
    <a
      className="rsg--sectionName-2"
      href="/section"
    >
      A Section
    </a>
  </Styled(Heading)>
  <div
    className="rsg--toolbar-1"
  >
    <FakeToolbar />
  </div>
</div>
`;
